--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       padding: 15px;
       font-size: 0.9em;
       letter-spacing: 0.5px;
-      color:#e2c15c
+      color:#251d04
       }
 
     /* --- MODO RESPONSIVE --- */
@@ -220,6 +220,8 @@ Tipos de Labios
 
   <footer>
     TURNOS: 1165110487
+    <br>Puerto Madero: Olga Cossettini 1691 - 211
+    <br>Lomas de Zamora: Hipolito Yrigoyen 9183 - 8a
     <br>© 2025 - Diseñado por MC
   </footer>
 
