--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@ Tipos de Labios
 
   <footer>
     TURNOS: 1165110487
-    <br>Puerto Madero: Olga Cossettini 1691 - 211
-    <br>Lomas de Zamora: Hipolito Yrigoyen 9183 - 8a
+    <br>Puerto Madero: Olga Cossettini 1691 - piso 2 - depto 211
+    <br>Lomas de Zamora: Hipolito Yrigoyen 9183 - 8A
+    <br>Concordia - Entre Rios - Pelegrini 579
     <br>© 2025 - Diseñado por MC
   </footer>
 
