--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Tipos de Labios
     <br>
    
     
-    <a href="https://anahiversace.com.ar/tratamientos/">www.anahiversace.com.ar</a>
+    <a href="https://anahiversace.com.ar/">www.anahiversace.com.ar</a>
   <br>
     
   </main>
